--- a/index.html
+++ b/index.html
@@ -4,17 +4,19 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Charity:Water Landing Page</title>
-  <link rel="stylesheet" href="style.css">
+  <!-- Google Fonts (Proxima Nova Alternative) -->
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
+
+  <!-- CSS Link -->
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
   <header class="top-bar">
-    <div class="logo">
-      <img src="logo.png" alt="Charity Icon">
-      <span>Charity:Water</span>
-    </div>
-    <button class="free-trial">Free Trial</button>
-  </header>
-
+  <div class="logo">
+    <img src="logo.png" alt="Charity Icon">
+  </div>
+  <button class="donate-button">Donate</button>
+</header>
   <section class="hero">
     <div class="overlay">
       <div class="hero-content">
@@ -22,7 +24,7 @@
         <p>Join a movement of students bringing safe water to those in need.<br>
            We show you exactly where your donation goes, every time.</p>
         <form class="subscribe-form">
-          <input type="email" placeholder="Enter your email">
+            <input type="email" placeholder="Enter your email">
           <button type="submit">Subscribe</button>
         </form>
       </div>
